--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,12 @@
     border-style: solid;
     border-width: 2px;
 }
+
+#box{
+    border-style: solid;
+    border-width: 2px;
+    width: 250px;
+    height: 250px;
+    display: inline-block;
+    margin: 10px;
+}
