--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-.row{
+.borderRow{
     border-style: solid;
     border-width: 2px;
 }
@@ -6,8 +6,24 @@
 #box{
     border-style: solid;
     border-width: 2px;
-    width: 250px;
+    width: 325px;
     height: 250px;
-    display: inline-block;
     margin: 10px;
+    display: inline-block;
+}
+.choice{
+    background-image: url("../images/rps.png");
+}
+.rock{
+    background-position-x: 317px;
+    background-position-y: -129px;
+}
+.paper{
+    background-position-x: -70px;
+    background-position-y: 275px;
+    background-size: 600px 600px;
+}
+.scissors{
+    background-position-x: -43px;
+    background-position-y: -40px;
 }
